Eemalda n+1 query probleem + refakto - pikad meetodid