@@ -21,14 +21,20 @@ public class SynsetRelationService {
     private final SenseRepository senseRepository;
     private final DefinitionRepository definitionRepository;
 
+    //TODO tee seda kohutavat meetodit lühemaks
     public Map<String, List<WordWithDefinitionDto>> getSynsetRelationsData(Integer id) {
-        Optional<WnwbSynset> synsetOpt = synsetRepository.findById(id);
+        Optional<WnwbSynset> synsetOpt = synsetRepository.findByIdWithLexicon(id);
         if (synsetOpt.isEmpty()) {
             return Collections.emptyMap();
         }
         WnwbSynset synset = synsetOpt.get();
         List<WnwbSynsetRelation> relations = synsetRelationRepository.findAllBySynset(synset);
-        Map<String, Set<WordWithDefinitionDto>> resultSet = new HashMap<>();
+        if (relations.isEmpty()) {
+            return Collections.emptyMap();
+        }
+        Set<Integer> relatedSynsetIds = new HashSet<>();
+        Map<Integer, String> synsetIdToRelationType = new HashMap<>();
+
         for (WnwbSynsetRelation rel : relations) {
             String type = rel.getRelType().getName();
             WnwbSynset related = null;
@@ -39,20 +45,40 @@ public class SynsetRelationService {
             } else {
                 related = rel.getASynset().equals(synset) ? rel.getBSynset() : rel.getASynset();
             }
-            if (related == null) continue;
-            List<WnwbSense> senses = senseRepository.findBySynsetId(related.getId());
+
+            if (related != null) {
+                relatedSynsetIds.add(related.getId());
+                synsetIdToRelationType.put(related.getId(), type);
+            }
+        }
+
+        if (relatedSynsetIds.isEmpty()) {
+            return Collections.emptyMap();
+        }
+
+        List<WnwbSense> allSenses = senseRepository.findBySynsetIdIn(relatedSynsetIds);
+        Map<Integer, List<WnwbSense>> synsetIdToSensesMap = new HashMap<>();
+        Set<Integer> senseIds = new HashSet<>();
+        Set<Integer> synsetIdsForDefs = new HashSet<>();
+        groupSensesBySynset(allSenses, synsetIdToSensesMap, senseIds, synsetIdsForDefs);
+
+        Map<Integer, String> senseIdToDefinitionMap = new HashMap<>();
+        //TODO midagi cachemiseks?  15min evictioniga nt?
+        Map<Integer, String> synsetIdToDefinitionMap = new HashMap<>();
+        loadDefinitionsForSynsets(allSenses, synsetIdsForDefs, synsetIdToDefinitionMap);
+
+        Map<String, Set<WordWithDefinitionDto>> resultSet = new HashMap<>();
+        for (Integer relatedSynsetId : relatedSynsetIds) {
+            String type = synsetIdToRelationType.get(relatedSynsetId);
+            List<WnwbSense> senses = synsetIdToSensesMap.get(relatedSynsetId);
+
+            if (senses == null || senses.isEmpty()) {
+                continue;
+            }
             WordWithDefinitionDto dto = null;
             for (WnwbSense sense : senses) {
-                String definition = null;
-                var defs = definitionRepository.findBySenseIdAndLang(sense.getId(), sense.getLexicalEntry().getLexicon().getLanguage());
-                if (!defs.isEmpty() && defs.get(0).getText() != null && !defs.get(0).getText().isBlank()) {
-                    definition = defs.get(0).getText();
-                } else if (sense.getSynset() != null) {
-                    var synsetDefs = definitionRepository.findBySynsetIdAndLang(sense.getSynset().getId(), sense.getLexicalEntry().getLexicon().getLanguage());
-                    if (!synsetDefs.isEmpty() && synsetDefs.get(0).getText() != null && !synsetDefs.get(0).getText().isBlank()) {
-                        definition = synsetDefs.get(0).getText();
-                    }
-                }
+                String definition = synsetIdToDefinitionMap.get(sense.getSynset().getId());
+
                 if (definition != null) {
                     dto = new WordWithDefinitionDto();
                     dto.setId(sense.getId());
@@ -60,14 +86,12 @@ public class SynsetRelationService {
                     dto.setPartOfSpeech(sense.getLexicalEntry().getPartOfSpeech());
                     dto.setDefinition(definition);
                     dto.setLabel(sense.getLabel());
-                    if (sense.getSynset() != null) {
-                        dto.setSynsetId(sense.getSynset().getId());
-                    }
+                    dto.setSynsetId(sense.getSynset().getId());
                     break;
                 }
             }
-            if (dto == null && !senses.isEmpty()) {
-                WnwbSense sense = senses.get(0);
+            if (dto == null) {
+                WnwbSense sense = senses.getFirst();
                 dto = new WordWithDefinitionDto();
                 dto.setId(sense.getId());
                 dto.setLemma(sense.getLexicalEntry().getLemma());
@@ -78,10 +102,11 @@ public class SynsetRelationService {
                     dto.setSynsetId(sense.getSynset().getId());
                 }
             }
-            if (dto != null) {
-                if (dto.getSynsetId() != null) {
-                    List<WnwbSense> allSenses = senseRepository.findBySynsetId(dto.getSynsetId());
-                    List<String> relevantWords = allSenses.stream()
+
+            if (dto.getSynsetId() != null) {
+                List<WnwbSense> synsetSenses = synsetIdToSensesMap.get(dto.getSynsetId());
+                if (synsetSenses != null) {
+                    List<String> relevantWords = synsetSenses.stream()
                         .map(s -> s.getLexicalEntry().getLemma())
                         .distinct()
                         .toList();
@@ -89,13 +114,40 @@ public class SynsetRelationService {
                 } else {
                     dto.setRelevantWords(List.of());
                 }
-                resultSet.computeIfAbsent(type, k -> new java.util.HashSet<>()).add(dto);
+            } else {
+                dto.setRelevantWords(List.of());
             }
+            resultSet.computeIfAbsent(type, k -> new HashSet<>()).add(dto);
         }
         Map<String, List<WordWithDefinitionDto>> result = new HashMap<>();
         for (Map.Entry<String, Set<WordWithDefinitionDto>> entry : resultSet.entrySet()) {
             result.put(entry.getKey(), new ArrayList<>(entry.getValue()));
         }
         return result;
+    }
+
+    private void loadDefinitionsForSynsets(List<WnwbSense> allSenses, Set<Integer> synsetIdsForDefs, Map<Integer, String> synsetIdToDefinitionMap) {
+        if (!allSenses.isEmpty()) {
+            String language = allSenses.getFirst().getLexicalEntry().getLexicon().getLanguage();
+            if (!synsetIdsForDefs.isEmpty()) {
+                var synsetDefs = definitionRepository.findBySynsetIdInAndLang(synsetIdsForDefs, language);
+                for (var def : synsetDefs) {
+                    if (def.getSynset() != null && def.getText() != null && !def.getText().isBlank()) {
+                        synsetIdToDefinitionMap.putIfAbsent(def.getSynset().getId(), def.getText());
+                    }
+                }
+            }
+        }
+    }
+
+    private static void groupSensesBySynset(List<WnwbSense> allSenses, Map<Integer, List<WnwbSense>> synsetIdToSensesMap, Set<Integer> senseIds,
+                                  Set<Integer> synsetIdsForDefs) {
+        for (WnwbSense sense : allSenses) {
+            if (sense.getSynset() != null) {
+                synsetIdToSensesMap.computeIfAbsent(sense.getSynset().getId(), k -> new ArrayList<>()).add(sense);
+                senseIds.add(sense.getId());
+                synsetIdsForDefs.add(sense.getSynset().getId());
+            }
+        }
     }
 }
